# html-for-plasma

./: LICENSE  README.md  pyproject.toml
docs/: MVP_SPEC.md
samples/: sample_dashboard.html
src/html_for_plasma/: __init__.py  cli.py  converter.py  html_parser.py  mapper.py  qml_emitter.py  style.py
tests/: test_converter.py
